src/main/java/org/example/lab_3/error/ApartmentUnavailableForDateRangeException.java
package org.example.lab_3.error;

public class ApartmentUnavailableForDateRangeException extends RuntimeException {

	public ApartmentUnavailableForDateRangeException(String message) {
		super(message);
	}
}
